Removing most type related warnings and unnecessary casts.  Also doing some basic formatting.